# 221-ec2-flask

./: .gitignore  README.md  app.py  pyproject.toml
static/: petstore_swagger.json
