[tool.poetry]
name = "helloworld2"
version = "0.1.0"
description = ""
authors = ["terrytaylorbonn <terrytaylorbonn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
flask-smorest = "^0.45.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
